--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:ci": "jest --ci --coverage"
 	},
 	"dependencies": {
 		"@2toad/profanity": "^3.0.1",
@@ -21,6 +24,14 @@
 	"devDependencies": {
 		"@aws-amplify/backend": "^1.5.0",
 		"@aws-amplify/backend-cli": "^1.2.9",
+		"@babel/core": "^7.26.9",
+		"@babel/preset-env": "^7.26.9",
+		"@babel/preset-react": "^7.26.3",
+		"@babel/preset-typescript": "^7.26.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.2.0",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/jest": "^29.5.14",
 		"@types/node": "^22.7.9",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
@@ -29,6 +40,7 @@
 		"autoprefixer": "^10.4.20",
 		"aws-cdk": "^2.163.1",
 		"aws-cdk-lib": "^2.163.1",
+		"babel-jest": "^29.7.0",
 		"constructs": "^10.4.2",
 		"daisyui": "^4.12.13",
 		"esbuild": "^0.24.0",
@@ -38,8 +50,12 @@
 		"eslint-plugin-jsx-a11y": "^6.10.1",
 		"eslint-plugin-react": "^7.37.2",
 		"eslint-plugin-react-hooks": "^5.0.0",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"postcss": "^8.4.47",
 		"tailwindcss": "^3.4.14",
+		"ts-jest": "^29.2.6",
 		"tsx": "^4.19.1",
 		"typescript": "^5.6.3"
 	}
