--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
+		"jest-junit": "^16.0.0",
+		"jest-watch-typeahead": "^2.2.2",
 		"postcss": "^8.4.47",
 		"tailwindcss": "^3.4.14",
 		"ts-jest": "^29.2.6",
