--- a/package.json
+++ b/package.json
@@ -44,21 +44,28 @@
 		"constructs": "^10.4.2",
 		"daisyui": "^4.12.13",
 		"esbuild": "^0.25.1",
-		"eslint": "^8.57.0",
-		"eslint-config-next": "^14.2.16",
+		"eslint": "^9.22.0",
+		"eslint-config-next": "^15.2.1",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-jsx-a11y": "^6.10.1",
 		"eslint-plugin-react": "^7.37.2",
 		"eslint-plugin-react-hooks": "^5.0.0",
+		"glob": "^11.0.1",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-junit": "^16.0.0",
 		"jest-watch-typeahead": "^2.2.2",
 		"postcss": "^8.4.47",
+		"rimraf": "^6.0.1",
 		"tailwindcss": "^3.4.14",
 		"ts-jest": "^29.2.6",
 		"tsx": "^4.19.1",
 		"typescript": "^5.6.3"
+	},
+	"overrides": {
+		"inflight": "lru-cache@^10.0.1",
+		"glob": "^11.0.1",
+		"rimraf": "^6.0.1"
 	}
 }
