--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
+		"lint:fix": "prettier --write --tab-width=2 --use-tabs . && next lint --fix",
 		"test": "node --no-deprecation ./node_modules/.bin/jest",
 		"test:watch": "node --no-deprecation ./node_modules/.bin/jest --watch",
 		"test:ci": "node --no-deprecation ./node_modules/.bin/jest --ci --coverage"
@@ -51,6 +52,7 @@
 		"eslint-plugin-react": "^7.37.2",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"glob": "^11.0.1",
+		"husky": "^9.1.7",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
