--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"test": "node --no-deprecation ./node_modules/.bin/jest",
 		"test:watch": "node --no-deprecation ./node_modules/.bin/jest --watch",
 		"test:ci": "node --no-deprecation ./node_modules/.bin/jest --ci --coverage",
+		"test:a11y": "node --no-deprecation ./node_modules/.bin/jest --testPathPattern=.*\\.a11y\\.test\\.(js|jsx|ts|tsx)$",
 		"update-deps": "npx npm-check-updates -u --dep dev --target minor && npm install"
 	},
 	"dependencies": {
@@ -39,6 +40,7 @@
 		"@testing-library/react": "^16.2.0",
 		"@testing-library/user-event": "^14.6.1",
 		"@types/jest": "^29.5.14",
+		"@types/jest-axe": "^3.5.9",
 		"@types/node": "^22.13.10",
 		"@types/react": "^18.3.18",
 		"@types/react-dom": "^18.3.5",
@@ -63,6 +65,7 @@
 		"husky": "^9.1.7",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
+		"jest-axe": "^8.0.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-junit": "^16.0.0",
 		"jest-watch-typeahead": "^2.2.2",
