--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -11,6 +11,8 @@ on:
     paths-ignore:
       - '**/*.md'
       - 'docs/**'
+  # Allow manual trigger from the Actions tab
+  workflow_dispatch:
 
 # Set minimal permissions (security best practice)
 permissions: {}
@@ -33,6 +35,7 @@ jobs:
     outputs:
       code: ${{ steps.filter.outputs.code }}
       styles: ${{ steps.filter.outputs.styles }}
+      e2e: ${{ steps.filter.outputs.e2e }}
     steps:
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
@@ -47,6 +50,9 @@ jobs:
             styles:
               - '**/*.{css,scss}'
               - 'tailwind.config.{js,ts}'
+            e2e:
+              - 'e2e/**/*.{js,ts}'
+              - 'playwright.config.{js,ts}'
 
   # Lint and format job
   lint:
@@ -209,6 +215,14 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
         env:
           NODE_OPTIONS: --max-old-space-size=4096 --no-deprecation
+      
+      # Save the build output for later jobs
+      - name: Save build output
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-output
+          path: .next
+          retention-days: 1
 
   # Test job
   test:
@@ -266,3 +280,128 @@ jobs:
       
       - name: Run tests
         run: ${{ steps.detect-package-manager.outputs.manager }} test
+
+  # E2E testing with Playwright - Optimized for speed
+  e2e-tests:
+    name: E2E Tests (Shard ${{ matrix.shardIndex }}/${{ matrix.shardTotal }})
+    runs-on: ubuntu-latest
+    needs: [changes, build]
+    if: ${{ needs.changes.outputs.code == 'true' || needs.changes.outputs.e2e == 'true' || github.event_name == 'pull_request' }}
+    timeout-minutes: 10
+    permissions:
+      contents: read
+    strategy:
+      fail-fast: false  # Don't cancel all shards if one fails
+      matrix:
+        shardIndex: [1, 2, 3]
+        shardTotal: [3]
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1  # Shallow clone for speed
+      
+      - name: Setup Node with caching
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: npm
+      
+      - name: Get Playwright version
+        id: playwright-version
+        run: echo "version=$(node -e "console.log(require('./package.json').devDependencies['@playwright/test'])")" >> $GITHUB_OUTPUT
+      
+      # Cache node_modules for faster setup
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        id: node-modules-cache
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}-v1
+      
+      - name: Install dependencies (if cache miss)
+        if: steps.node-modules-cache.outputs.cache-hit != 'true'
+        run: npm ci
+      
+      # Cache Playwright browsers - critical for speed
+      - name: Cache Playwright browsers
+        uses: actions/cache@v4
+        id: playwright-browsers-cache
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ steps.playwright-version.outputs.version }}
+      
+      # Only install browsers if cache missed
+      - name: Install Playwright browsers
+        if: steps.playwright-browsers-cache.outputs.cache-hit != 'true'
+        run: npx playwright install --with-deps chromium firefox webkit
+      
+      # Only install dependencies if cache hit (browsers already installed)
+      - name: Install Playwright dependencies
+        if: steps.playwright-browsers-cache.outputs.cache-hit == 'true'
+        run: npx playwright install-deps
+      
+      # Download build artifacts from previous job
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: build-output
+          path: .next
+      
+      # Add Amplify outputs file (needed for build)
+      - name: Add Amplify outputs file
+        run: touch amplify_outputs.json && echo "{}" > amplify_outputs.json
+      
+      # Run tests with sharding
+      - name: Run Playwright tests
+        run: npx playwright test --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
+      
+      # Always upload artifacts for debugging
+      - name: Upload test artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report-${{ matrix.shardIndex }}
+          path: |
+            playwright-report/
+            test-results/
+          retention-days: 7
+
+  # Optional: Merge reports from all shards
+  merge-reports:
+    name: Merge test reports
+    needs: [e2e-tests]
+    if: always() && needs.e2e-tests.result != 'cancelled'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: npm
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Download all test artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: playwright-report-*
+          path: all-artifacts
+      
+      - name: Merge reports
+        run: |
+          npx playwright merge-reports --reporter html,json,list ./all-artifacts
+      
+      - name: Upload merged report
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report-merged
+          path: playwright-report
+          retention-days: 7
