--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@
 
 # testing
 /coverage
+/playwright-report/
+/test-results/
+/e2e-results/
+/.playwright/
+/playwright/.cache/
+playwright-results.xml
 
 # next.js
 /.next/
@@ -51,3 +57,7 @@ amplifyconfiguration*
 
 # windsurf rules
 .windsurfrules
+
+# Additional build caches
+.swc/
+.turbo/
