--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
 		"test:watch": "node --no-deprecation ./node_modules/.bin/jest --watch",
 		"test:ci": "node --no-deprecation ./node_modules/.bin/jest --ci --coverage",
 		"test:a11y": "node --no-deprecation ./node_modules/.bin/jest --testPathPattern=.*\\.a11y\\.test\\.(js|jsx|ts|tsx)$",
+		"test:e2e": "playwright test",
+		"test:e2e:ui": "playwright test --ui",
+		"test:e2e:debug": "playwright test --debug",
+		"test:e2e:report": "playwright show-report",
 		"update-deps": "npx npm-check-updates -u --dep dev --target minor && npm install"
 	},
 	"dependencies": {
@@ -36,6 +40,7 @@
 		"@babel/preset-env": "^7.26.9",
 		"@babel/preset-react": "^7.26.3",
 		"@babel/preset-typescript": "^7.26.0",
+		"@playwright/test": "^1.51.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
 		"@testing-library/user-event": "^14.6.1",
