--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -215,14 +215,23 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
         env:
           NODE_OPTIONS: --max-old-space-size=4096 --no-deprecation
+
+      # Debug step to verify .next directory exists and contains files
+      - name: Check .next directory
+        run: |
+          echo "Contents of workspace:"
+          ls -la
+          echo ".next directory exists:"
+          ls -la .next || echo ".next directory not found!"
       
-      # Save the build output for later jobs
-      - name: Save build output
+      # Fixed upload artifact step with proper settings
+      - name: Upload build output
         uses: actions/upload-artifact@v4
         with:
           name: build-output
           path: .next
           retention-days: 1
+          if-no-files-found: error # Will make the workflow fail if no files found
 
   # Test job
   test:
@@ -281,20 +290,15 @@ jobs:
       - name: Run tests
         run: ${{ steps.detect-package-manager.outputs.manager }} test
 
-  # E2E testing with Playwright - Optimized for speed
+  # E2E testing with Playwright (simplified to make it more reliable)
   e2e-tests:
-    name: E2E Tests (Shard ${{ matrix.shardIndex }}/${{ matrix.shardTotal }})
+    name: Playwright E2E Tests
     runs-on: ubuntu-latest
-    needs: [changes, build]
+    needs: [changes]
     if: ${{ needs.changes.outputs.code == 'true' || needs.changes.outputs.e2e == 'true' || github.event_name == 'pull_request' }}
-    timeout-minutes: 10
+    timeout-minutes: 15
     permissions:
       contents: read
-    strategy:
-      fail-fast: false  # Don't cancel all shards if one fails
-      matrix:
-        shardIndex: [1, 2, 3]
-        shardTotal: [3]
     
     steps:
       - name: Checkout
@@ -302,17 +306,22 @@ jobs:
         with:
           fetch-depth: 1  # Shallow clone for speed
       
-      - name: Setup Node with caching
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: npm
+          cache: 'npm'
       
       - name: Get Playwright version
         id: playwright-version
-        run: echo "version=$(node -e "console.log(require('./package.json').devDependencies['@playwright/test'])")" >> $GITHUB_OUTPUT
+        run: |
+          if [ -f "package.json" ]; then
+            VERSION=$(node -e "try { console.log(require('./package.json').devDependencies['@playwright/test'] || 'latest') } catch { console.log('latest') }")
+            echo "version=$VERSION" >> $GITHUB_OUTPUT
+          else
+            echo "version=latest" >> $GITHUB_OUTPUT
+          fi
       
-      # Cache node_modules for faster setup
       - name: Cache node_modules
         uses: actions/cache@v4
         id: node-modules-cache
@@ -320,11 +329,11 @@ jobs:
           path: node_modules
           key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}-v1
       
-      - name: Install dependencies (if cache miss)
+      - name: Install dependencies
         if: steps.node-modules-cache.outputs.cache-hit != 'true'
         run: npm ci
       
-      # Cache Playwright browsers - critical for speed
+      # Cache Playwright browsers
       - name: Cache Playwright browsers
         uses: actions/cache@v4
         id: playwright-browsers-cache
@@ -332,76 +341,58 @@ jobs:
           path: ~/.cache/ms-playwright
           key: ${{ runner.os }}-playwright-${{ steps.playwright-version.outputs.version }}
       
-      # Only install browsers if cache missed
+      # Conditionally install browsers or just dependencies
       - name: Install Playwright browsers
         if: steps.playwright-browsers-cache.outputs.cache-hit != 'true'
-        run: npx playwright install --with-deps chromium firefox webkit
+        run: npx playwright install --with-deps chromium
       
-      # Only install dependencies if cache hit (browsers already installed)
       - name: Install Playwright dependencies
         if: steps.playwright-browsers-cache.outputs.cache-hit == 'true'
-        run: npx playwright install-deps
-      
-      # Download build artifacts from previous job
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: build-output
-          path: .next
+        run: npx playwright install-deps chromium
       
       # Add Amplify outputs file (needed for build)
       - name: Add Amplify outputs file
         run: touch amplify_outputs.json && echo "{}" > amplify_outputs.json
       
-      # Run tests with sharding
+      # Build within the E2E job instead of depending on separate build job
+      - name: Build Next.js for E2E tests
+        run: npm run build
+        env:
+          NODE_OPTIONS: --max-old-space-size=4096 --no-deprecation
+      
+      # Run a simple single-shard test to ensure everything works
       - name: Run Playwright tests
-        run: npx playwright test --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
+        run: npx playwright test
+        env:
+          # Pass environment variables if needed
+          CI: true
       
       # Always upload artifacts for debugging
       - name: Upload test artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-report-${{ matrix.shardIndex }}
+          name: playwright-report
           path: |
             playwright-report/
             test-results/
           retention-days: 7
 
-  # Optional: Merge reports from all shards
-  merge-reports:
-    name: Merge test reports
-    needs: [e2e-tests]
-    if: always() && needs.e2e-tests.result != 'cancelled'
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: npm
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Download all test artifacts
-        uses: actions/download-artifact@v4
-        with:
-          pattern: playwright-report-*
-          path: all-artifacts
-      
-      - name: Merge reports
-        run: |
-          npx playwright merge-reports --reporter html,json,list ./all-artifacts
-      
-      - name: Upload merged report
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report-merged
-          path: playwright-report
-          retention-days: 7
+  # You can re-enable the sharded workflow once the basic setup is working
+  # just uncomment and modify as needed
+  
+  # Sharded tests for when your E2E setup is fully working
+  # e2e-tests-sharded:
+  #   name: E2E Tests (Shard ${{ matrix.shardIndex }}/${{ matrix.shardTotal }})
+  #   runs-on: ubuntu-latest
+  #   needs: [changes, e2e-tests]
+  #   if: ${{ false }}  # Disabled until main E2E tests are passing
+  #   timeout-minutes: 10
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       shardIndex: [1, 2, 3]
+  #       shardTotal: [3]
+  #   steps:
+  #     # Steps similar to e2e-tests job but with --shard parameter
+  #     # ...
