--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -264,5 +264,12 @@ jobs:
       - name: Populate Amplify outputs file
         run: echo "{}" > amplify_outputs.json
       
-      - name: Run tests
-        run: ${{ steps.detect-package-manager.outputs.manager }} test
+      - name: Run unit tests (excluding E2E tests)
+        run: ${{ steps.detect-package-manager.outputs.manager }} test -- --testPathIgnorePatterns="e2e"
+        
+      - name: Display E2E test instructions
+        run: |
+          echo "========== E2E TESTS SHOULD BE RUN MANUALLY =========="
+          echo "As requested, E2E tests are excluded from CI and should be run manually by developers"
+          echo "To run E2E tests locally, use: npx playwright test"
+          echo "======================================================"
