--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@2toad/profanity": "^3.0.1",
 		"@aws-amplify/ui-react": "^6.5.5",
 		"aws-amplify": "^6.6.6",
+		"jquery-ui": "^1.14.1",
 		"next": "^14.2.16",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -41,6 +42,8 @@
 		"@testing-library/user-event": "^14.6.1",
 		"@types/jest": "^29.5.14",
 		"@types/jest-axe": "^3.5.9",
+		"@types/jquery": "^3.5.32",
+		"@types/jqueryui": "^1.12.24",
 		"@types/node": "^22.13.10",
 		"@types/react": "^18.3.18",
 		"@types/react-dom": "^18.3.5",
