--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
 		"@2toad/profanity": "^3.0.1",
 		"@aws-amplify/ui-react": "^6.5.5",
 		"aws-amplify": "^6.6.6",
-		"jquery-ui": "^1.14.1",
 		"dotenv": "^16.4.7",
+		"jquery": "^3.7.1",
+		"jquery-ui": "^1.14.1",
 		"mongodb": "^6.15.0",
 		"mongoose": "^8.13.0",
 		"next": "^14.2.16",
