--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
 	"useTabs": true,
 	"semi": true,
 	"singleQuote": false,
+	"jsxSingleQuote": false,
 	"trailingComma": "all",
 	"bracketSpacing": true,
 	"bracketSameLine": false,
