--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -48,34 +48,18 @@ jobs:
               - '**/*.{css,scss}'
               - 'tailwind.config.{js,ts}'
 
-  # Lint and format job
-  lint:
+  # Build job
+  build:
     runs-on: ubuntu-latest
-    needs: changes
+    needs: [changes]
     if: ${{ needs.changes.outputs.code == 'true' || github.event_name == 'pull_request' }}
-    # Grant specific permissions needed for lint job
+    timeout-minutes: 15
+    # Grant specific permissions needed for build job
     permissions:
-      checks: write
-      contents: write
-      pull-requests: write
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          # Make sure the actual branch is checked out when running on pull requests
-          ref: ${{ github.head_ref }}
-          # Full git history is needed for proper linting
-          fetch-depth: 0
-      
-      - name: Prettify code
-        uses: creyD/prettier_action@v4.5
-        with:
-          prettier_options: '--print-width 120 --tab-width 2 --use-tabs true --semi true --single-quote false --jsx-single-quote false --trailing-comma all --bracket-spacing true --bracket-same-line false --arrow-parens always --end-of-line auto --write .'
-          prettier_plugins: prettier-plugin-tailwindcss
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          commit_message: "🧹 Automated code formatting"
-          same_commit: true
-          commit_options: ${{ github.ref != 'refs/heads/main' && '--no-verify --allow-empty' || '' }}
       
       - name: Detect package manager
         id: detect-package-manager
@@ -109,81 +93,6 @@ jobs:
           path: node_modules
           key: ${{ runner.os }}-${{ steps.detect-package-manager.outputs.manager }}-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-v2
       
-      - name: Install dependencies
-        if: steps.node-modules-cache.outputs.cache-hit != 'true'
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-      
-      - name: Install additional dependencies for linting
-        run: |
-          ${{ steps.detect-package-manager.outputs.manager }} add --save-dev eslint-plugin-prettier prettier-plugin-tailwindcss
-      
-      # Enhanced linting strategy - auto-fix but don't fail on warnings
-      - name: Run ESLint with auto-fix
-        id: eslint-fix
-        continue-on-error: true
-        run: |
-          echo "Running ESLint with auto-fix..."
-          ${{ steps.detect-package-manager.outputs.runner }} next lint --fix
-      
-      # Check for errors, but allow warnings
-      - name: Check for ESLint errors
-        run: |
-          echo "Checking for ESLint errors (allowing warnings)..."
-          ${{ steps.detect-package-manager.outputs.runner }} next lint --quiet || {
-            echo "::error::ESLint found errors that must be fixed. Please review the errors above.";
-            exit 1;
-          }
-      
-      # Report warnings but don't fail the build
-      - name: Report ESLint warnings
-        run: |
-          echo "Checking for ESLint warnings (won't fail build)..."
-          ${{ steps.detect-package-manager.outputs.runner }} next lint || echo "::warning::ESLint found warnings, but continuing build. Please consider fixing these warnings when possible."
-
-  # Build job - preserved your logic with optimizations
-  build:
-    runs-on: ubuntu-latest
-    needs: [lint]
-    timeout-minutes: 15
-    # Grant specific permissions needed for build job
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      
-      - name: Detect package manager
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-            exit 0
-          else
-            echo "Unable to determine package manager"
-            exit 1
-          fi
-      
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
-      
-      # Reusing improved caching from above
-      - name: Cache node_modules
-        uses: actions/cache@v4
-        id: node-modules-cache
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ steps.detect-package-manager.outputs.manager }}-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-v2
-      
       - name: Restore Next.js build cache
         uses: actions/cache@v4
         with:
@@ -199,7 +108,6 @@ jobs:
         if: steps.node-modules-cache.outputs.cache-hit != 'true'
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }} --no-audit --force
       
-      # Preserved from original workflow
       - name: Add Amplify outputs file
         run: touch amplify_outputs.json
       
@@ -258,7 +166,6 @@ jobs:
         if: steps.node-modules-cache.outputs.cache-hit != 'true'
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }} --no-audit --force
       
-      # Added Amplify file creation steps
       - name: Add Amplify outputs file
         run: touch amplify_outputs.json
       
